// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QueryGridPaging/> first page 1`] = `
Array [
  <span
    className="paging-counts-with-buttons"
    data-max={20}
    data-min={1}
    data-total={50}
  >
    <span>
      1
       - 
      20
    </span>
     
    of 
    50
  </span>,
  <div
    className="btn-group"
  >
    <button
      className="disabled-button-with-tooltip btn btn-default"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <i
        className="fa fa-chevron-left"
      />
    </button>
    <div
      className="dropdown btn-group"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="dropdown-toggle btn btn-default"
        disabled={false}
        id="current-page-drop-undefined"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="button"
        type="button"
      >
        1
         
        <span
          className="caret"
        />
      </button>
      <ul
        aria-labelledby="current-page-drop-undefined"
        className="dropdown-menu dropdown-menu-right"
        role="menu"
      >
        <li
          className="dropdown-header"
          onKeyDown={[Function]}
          role="heading"
        >
          Jump To
        </li>
        <li
          className="disabled"
          role="presentation"
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="menuitem"
            tabIndex="-1"
          >
            First Page
          </a>
        </li>
        <li
          className=""
          role="presentation"
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="menuitem"
            tabIndex="-1"
          >
            Last Page
          </a>
        </li>
        <li
          className="dropdown-header"
          onKeyDown={[Function]}
          role="heading"
        >
          3
           Total Pages
        </li>
      </ul>
    </div>
    <button
      className="btn btn-default"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <i
        className="fa fa-chevron-right"
      />
    </button>
  </div>,
]
`;

exports[`<QueryGridPaging/> last page 1`] = `
Array [
  <span
    className="paging-counts-with-buttons"
    data-max={50}
    data-min={41}
    data-total={50}
  >
    <span>
      41
       - 
      50
    </span>
     
    of 
    50
  </span>,
  <div
    className="btn-group"
  >
    <button
      className="btn btn-default"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <i
        className="fa fa-chevron-left"
      />
    </button>
    <div
      className="dropdown btn-group"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="dropdown-toggle btn btn-default"
        disabled={false}
        id="current-page-drop-undefined"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="button"
        type="button"
      >
        3
         
        <span
          className="caret"
        />
      </button>
      <ul
        aria-labelledby="current-page-drop-undefined"
        className="dropdown-menu dropdown-menu-right"
        role="menu"
      >
        <li
          className="dropdown-header"
          onKeyDown={[Function]}
          role="heading"
        >
          Jump To
        </li>
        <li
          className=""
          role="presentation"
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="menuitem"
            tabIndex="-1"
          >
            First Page
          </a>
        </li>
        <li
          className="disabled"
          role="presentation"
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="menuitem"
            tabIndex="-1"
          >
            Last Page
          </a>
        </li>
        <li
          className="dropdown-header"
          onKeyDown={[Function]}
          role="heading"
        >
          3
           Total Pages
        </li>
      </ul>
    </div>
    <button
      className="disabled-button-with-tooltip btn btn-default"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <i
        className="fa fa-chevron-right"
      />
    </button>
  </div>,
]
`;

exports[`<QueryGridPaging/> middle page 1`] = `
Array [
  <span
    className="paging-counts-with-buttons"
    data-max={40}
    data-min={21}
    data-total={50}
  >
    <span>
      21
       - 
      40
    </span>
     
    of 
    50
  </span>,
  <div
    className="btn-group"
  >
    <button
      className="btn btn-default"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <i
        className="fa fa-chevron-left"
      />
    </button>
    <div
      className="dropdown btn-group"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="dropdown-toggle btn btn-default"
        disabled={false}
        id="current-page-drop-undefined"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="button"
        type="button"
      >
        2
         
        <span
          className="caret"
        />
      </button>
      <ul
        aria-labelledby="current-page-drop-undefined"
        className="dropdown-menu dropdown-menu-right"
        role="menu"
      >
        <li
          className="dropdown-header"
          onKeyDown={[Function]}
          role="heading"
        >
          Jump To
        </li>
        <li
          className=""
          role="presentation"
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="menuitem"
            tabIndex="-1"
          >
            First Page
          </a>
        </li>
        <li
          className=""
          role="presentation"
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="menuitem"
            tabIndex="-1"
          >
            Last Page
          </a>
        </li>
        <li
          className="dropdown-header"
          onKeyDown={[Function]}
          role="heading"
        >
          3
           Total Pages
        </li>
      </ul>
    </div>
    <button
      className="btn btn-default"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <i
        className="fa fa-chevron-right"
      />
    </button>
  </div>,
]
`;

exports[`<QueryGridPaging/> not isPaged 1`] = `null`;

exports[`<QueryGridPaging/> not showCounts 1`] = `
<div
  className="btn-group"
>
  <button
    className="disabled-button-with-tooltip btn btn-default"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <i
      className="fa fa-chevron-left"
    />
  </button>
  <div
    className="dropdown btn-group"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={false}
      id="current-page-drop-undefined"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="button"
      type="button"
    >
      1
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="current-page-drop-undefined"
      className="dropdown-menu dropdown-menu-right"
      role="menu"
    >
      <li
        className="dropdown-header"
        onKeyDown={[Function]}
        role="heading"
      >
        Jump To
      </li>
      <li
        className="disabled"
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          First Page
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Last Page
        </a>
      </li>
      <li
        className="dropdown-header"
        onKeyDown={[Function]}
        role="heading"
      >
        3
         Total Pages
      </li>
    </ul>
  </div>
  <button
    className="btn btn-default"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <i
      className="fa fa-chevron-right"
    />
  </button>
</div>
`;

exports[`<QueryGridPaging/> pageNumber past max 1`] = `
Array [
  <span
    className="paging-counts-with-buttons"
    data-max={50}
    data-min={61}
    data-total={50}
  >
    <span>
      61
       - 
      50
    </span>
     
    of 
    50
  </span>,
  <div
    className="btn-group"
  >
    <button
      className="btn btn-default"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <i
        className="fa fa-chevron-left"
      />
    </button>
    <div
      className="dropdown btn-group"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="dropdown-toggle btn btn-default"
        disabled={false}
        id="current-page-drop-undefined"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="button"
        type="button"
      >
        4
         
        <span
          className="caret"
        />
      </button>
      <ul
        aria-labelledby="current-page-drop-undefined"
        className="dropdown-menu dropdown-menu-right"
        role="menu"
      >
        <li
          className="dropdown-header"
          onKeyDown={[Function]}
          role="heading"
        >
          Jump To
        </li>
        <li
          className=""
          role="presentation"
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="menuitem"
            tabIndex="-1"
          >
            First Page
          </a>
        </li>
        <li
          className=""
          role="presentation"
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="menuitem"
            tabIndex="-1"
          >
            Last Page
          </a>
        </li>
        <li
          className="dropdown-header"
          onKeyDown={[Function]}
          role="heading"
        >
          3
           Total Pages
        </li>
      </ul>
    </div>
    <button
      className="disabled-button-with-tooltip btn btn-default"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <i
        className="fa fa-chevron-right"
      />
    </button>
  </div>,
]
`;

exports[`<QueryGridPaging/> pageSize equals total rows 1`] = `
<span
  className=""
  data-max={50}
  data-min={1}
  data-total={50}
>
  <span>
    1
     - 
    50
  </span>
   
  of 
  50
</span>
`;

exports[`<QueryGridPaging/> zero totalRows 1`] = `null`;
